--- a/TournamentManagement/App.config
+++ b/TournamentManagement/App.config
@@ -2,15 +2,18 @@
 
 <configuration>
 	<configSections>
-  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-   <section name="TournamentManagement.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-  </sectionGroup>
- </configSections>
- <userSettings>
-  <TournamentManagement.Properties.Settings>
-   <setting name="ConnectionString" serializeAs="String">
-    <value>Server=localhost\SQLEXPRESS;Database=DB_Tournament;Trusted_Connection=True;TrustServerCertificate=true;</value>
-   </setting>
-  </TournamentManagement.Properties.Settings>
- </userSettings>
+		<sectionGroup name="userSettings"
+		              type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="TournamentManagement.Properties.Settings"
+			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<userSettings>
+		<TournamentManagement.Properties.Settings>
+			<setting name="ConnectionString" serializeAs="String">
+				<value>Server=localhost\SQLEXPRESS;Database=DB_Tournament;Trusted_Connection=True;TrustServerCertificate=true;</value>
+			</setting>
+		</TournamentManagement.Properties.Settings>
+	</userSettings>
 </configuration>
