--- a/TournamentManagement/TournamentManagement.csproj
+++ b/TournamentManagement/TournamentManagement.csproj
@@ -9,12 +9,17 @@
 
   <ItemGroup>
     <Compile Remove="DbModels\**" />
+    <Compile Remove="OldModels\**" />
     <EmbeddedResource Remove="DbModels\**" />
+    <EmbeddedResource Remove="OldModels\**" />
     <None Remove="DbModels\**" />
+    <None Remove="OldModels\**" />
     <Page Remove="DbModels\**" />
+    <Page Remove="OldModels\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.5" />
