--- a/TournamentManagement/TournamentManagement.csproj
+++ b/TournamentManagement/TournamentManagement.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <PackageIcon>user-management-vector-icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -55,6 +56,10 @@
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Update="Resources\user-management-vector-icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
